--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,6 +37,14 @@
     height: 100px;
     padding-bottom: 1em;
 }
+
+.VideoTitulo{
+    font-size: 0.8em;
+}
+
+.CarouselText{
+    font-size: 0.8em;
+}
 /* FIN CURSOS */
 
 /* 404 */
