--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,19 +3,20 @@
     display: grid;
     grid-template-columns:33% 33% 33%;
     grid-template-rows: 0%;
-    padding-top: 5em;
+    padding-top: 4em;
+    padding-bottom: 1em;
 }
 
 .footer__redes{
     display: grid;
     grid-column-start: 3;
-    grid-row-start: 3;
+    grid-row-start: 4;
 }
 
 .footer__derechos{
     display: grid;
     grid-column-start: 1;
-    grid-row-start: 3;
+    grid-row-start: 4;
 
     a{
         text-decoration: none !important;
@@ -28,7 +29,7 @@
 .footer__apple{
     display: grid;
     grid-column-start: 2;
-    grid-row-start: 0;
+    grid-row-start: 3;
 }
 
 .footer__apple--flex{
