--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,15 @@ h1, p {
   flex-direction: column;
   padding-top: 4em; }
 
+.Graph {
+  display: flex;
+  flex-direction: row-reverse;
+  align-content: center;
+  align-self: flex-end; }
+
+.Spacing {
+  padding-bottom: 5em; }
+
 /* MONEDAS */
 .MonedasTitulo {
   padding-top: 2em;
@@ -100,20 +109,23 @@ h1, p {
 
 .AprendeMas {
   color: white;
-  font-size: 3em;
+  font-size: 1.5em;
   padding-top: 1em;
-  padding-bottom: 1em; }
+  padding-bottom: 1em;
+  text-decoration: underline; }
 
 .CarouselText {
   display: flex;
   justify-content: center;
   padding-top: 1.5em;
+  font-size: 0.8em;
   text-decoration: underline;
   color: white; }
 
 .VideoTitulo {
   color: white;
-  text-decoration: underline; }
+  text-decoration: underline;
+  font-size: 1em; }
 
 /* NOSOTROS */
 .form__contactanos {
@@ -158,17 +170,18 @@ h1, p {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 0%;
-  padding-top: 5em; }
+  padding-top: 4em;
+  padding-bottom: 1em; }
 
 .footer__redes {
   display: grid;
   grid-column-start: 3;
-  grid-row-start: 3; }
+  grid-row-start: 4; }
 
 .footer__derechos {
   display: grid;
   grid-column-start: 1;
-  grid-row-start: 3; }
+  grid-row-start: 4; }
   .footer__derechos a {
     text-decoration: none !important;
     color: white;
@@ -177,7 +190,7 @@ h1, p {
 .footer__apple {
   display: grid;
   grid-column-start: 2;
-  grid-row-start: 0; }
+  grid-row-start: 3; }
 
 .footer__apple--flex {
   display: flex;
@@ -216,8 +229,11 @@ h1, p {
     width: 200px;
     height: 100px;
     padding-bottom: 1em; }
+  .AprendeMas {
+    font-size: 1.5em;
+    text-decoration: underline; }
   .VideoTitulo {
-    font-size: 0.8em; }
+    font-size: 1em; }
   .CarouselText {
     font-size: 0.8em; }
   /* FIN CURSOS */
@@ -258,7 +274,8 @@ h1, p {
   .footer__apple {
     display: grid;
     grid-column-start: 1;
-    grid-row-start: 1; }
+    grid-row-start: 2;
+    padding-right: 1.5em; }
   /* FIN FOOTER */ }
 
 /* IPAD */
