--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -51,6 +51,11 @@
     animation-direction: alternate;
 }
 
+.IphoneBanner{
+  padding-top: 8em;
+  padding-left: 7em;
+}
+
 @keyframes shake {
     0% {
       transform: skewY(-10deg);
