--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -29,6 +29,10 @@
     width: 250px;
     padding: 0px;
 }
+
+.IphoneBanner{
+    display: none;
+}
 /* CURSOS */
 
 /* padding-right: 2em; */
@@ -49,6 +53,9 @@
 
 .CarouselText{
     font-size: 0.8em;
+}
+.CarouselFlow{
+    font-size: 0.5em;
 }
 /* FIN CURSOS */
 
